Fix alignment of HTML body

--- a/WWW/scenemodels/style.css
+++ b/WWW/scenemodels/style.css
@@ -3,7 +3,7 @@ BODY {
         color: #000000;
 	font-size: 14px;
         FONT-FAMILY: Verdana, Arial, Helvetica, Lucida, Sans-Serif;
-	text-align: center;
+	text-align: left;
 }
 
 A {
